--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Roboto, sans-serif;
-  background-color: #E5E5E5;
+  background-color: red;
 }
 
 button {
